--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,8 @@ dependencies {
     compile group: 'com.google.guava', name: 'guava', version: '23.0'
     compile group: 'org.apache.commons', name: 'commons-text', version: '1.1'
     compile group: 'io.reactivex', name: 'rxjava', version: '1.3.0'
+    compile group: 'commons-cli', name: 'commons-cli', version: '1.4'
+
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
